# grex

./: .gitignore  .typos.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  _typos.toml  clippy.toml  deny.toml  milestone.md  progress.md  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  doc-site.yml  docs.yml  release.yml
crates/grex/: Cargo.toml
crates/grex-core/: .gitignore  Cargo.toml
crates/grex-core/src/: doctor.rs  env.rs  import.rs  lib.rs  log.rs  pack_lock.rs  scheduler.rs  sync.rs
crates/grex-core/src/execute/: ctx.rs  error.rs  fs_executor.rs  mod.rs  plan.rs  predicate.rs  step.rs
crates/grex-core/src/fs/: atomic.rs  gitignore.rs  lock.rs  mod.rs
crates/grex-core/src/git/: error.rs  gix_backend.rs  mod.rs
crates/grex-core/src/lockfile/: entry.rs  hash.rs  io.rs  mod.rs
crates/grex-core/src/manifest/: append.rs  compact.rs  error.rs  event.rs  fold.rs  mod.rs
crates/grex-core/src/pack/: action.rs  error.rs  mod.rs  predicate.rs
crates/grex-core/src/pack/validate/: child_path.rs  cycle.rs  depends_on.rs  dup_symlink.rs  mod.rs
crates/grex-core/src/plugin/: mod.rs  pack_type.rs
crates/grex-core/src/tree/: error.rs  graph.rs  loader.rs  mod.rs  walker.rs
crates/grex-core/src/vars/: error.rs  mod.rs
crates/grex-core/tests/: atomic_write_survives_crash.rs  cancel_plumbing.rs  concurrency.rs  concurrent_append.rs  crash.rs  dispatch_parallel.rs  executor_fs.rs  executor_plan.rs  git_backend.rs  lockfile_roundtrip.rs  manifest_roundtrip.rs  manifest_torn_line.rs  manifest_torn_line_earlier.rs  meta_recursion.rs  pack.rs  pack_lock_gitignore.rs  pack_lock_stress.rs  pack_type_dispatch.rs  pack_validate.rs  property.rs  scheduler.rs  semantic_warnings.rs  sync_concurrent_append.rs  sync_recovery.rs  teardown_e2e.rs  tree_walk.rs
crates/grex-core/tests/fixtures/: pack-declarative.yaml  pack-exec-shell.yaml  pack-meta.yaml  pack-require-nested.yaml  pack-scripted.yaml
crates/grex-mcp/: Cargo.toml
crates/grex-mcp/src/: error.rs  lib.rs
crates/grex-mcp/src/tools/: add.rs  doctor.rs  exec.rs  handlers.rs  import.rs  init.rs  ls.rs  mod.rs  rm.rs  run.rs  status.rs  sync.rs  update.rs
crates/grex-mcp/tests/: agent_safety.rs  cancel.rs  cancellation.rs  handshake.rs  lock_ordering.rs  no_println_lint.rs  parity.rs  real_pipe_linux.rs  real_pipe_macos.rs  real_pipe_windows.rs  stdout_discipline.rs  stress.rs  tools_list_empty.rs
crates/grex-mcp/tests/common/: mod.rs
crates/grex-plugins-builtin/: Cargo.toml
crates/grex-plugins-builtin/src/: lib.rs
crates/grex/src/: lib.rs  main.rs
crates/grex/src/cli/: args.rs  mod.rs
crates/grex/src/cli/verbs/: add.rs  doctor.rs  exec.rs  import.rs  init.rs  ls.rs  mod.rs  rm.rs  run.rs  serve.rs  status.rs  sync.rs  teardown.rs  update.rs
crates/grex/tests/: cli_parallel.rs  doctor_cli.rs  global_flags.rs  help_output.rs  import_cli.rs  import_then_sync.rs  json_output.rs  legacy_workspace_migration.rs  license_metadata.rs  pack_template_smoke.rs  positional_args.rs  positioning_test.rs  property_flags.proptest-regressions  property_flags.rs  serve_smoke.rs  smoke.rs  sync_e2e.rs  verb_parsing.rs
crates/grex/tests/common/: mod.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
crates/xtask/tests/: version_test.rs
docs/: .gitignore  book.toml  build.ps1  build.sh  release.md  semver.md
docs/ci/: mcp-conformance.md
docs/src/: SUMMARY.md  introduction.md
docs/src-authored/: architecture.md  cli-json.md  cli.md  concurrency.md  man-pages.md  roadmap.md
examples/pack-template/: .gitignore  README.md
examples/pack-template/.grex/: pack.yaml
examples/pack-template/files/: hello.txt
grex-doc/: book.toml
grex-doc/src/: SUMMARY.md  release.md  semver.md
grex-doc/src/concepts/: architecture.md  manifest.md  pack-spec.md
grex-doc/src/guides/: migration.md
grex-doc/src/internals/: m3-review-findings.md
grex-doc/src/reference/: cli-json.md  mcp.md  plugin-api.md
lean/: Grex.lean  README.md  lake-manifest.json  lakefile.lean
lean/Grex/: Scheduler.lean
man/: README.md  grex-add.1  grex-doctor.1  grex-exec.1  grex-help.1  grex-import.1  grex-init.1  grex-ls.1  grex-rm.1  grex-run.1  grex-serve.1  grex-status.1  grex-sync.1  grex-teardown.1  grex-update.1  grex.1  introduction.md  release.md  semver.md
man/ci/: mcp-conformance.md
man/concepts/: goals.md  manifest.md  pack-spec.md
man/guides/: engineering.md  test-plan.md
man/internals/: linter.md  roadmap.md
man/reference/: actions.md  mcp.md  pack-template.md
openspec/archive/feat-m7-3-mcp-ci-conformance/: tasks.md
openspec/archive/feat-m7-4-import-doctor-license/: spec.md
openspec/changes/feat-m6-1-parallel-scheduler/: README.md  spec.md  tasks.md
openspec/changes/feat-m6-2-per-pack-lock/: README.md  spec.md  tasks.md
openspec/changes/feat-m6-3-lean4-proof/: README.md  spec.md  tasks.md
openspec/changes/feat-m7-1-mcp-server/: README.md  spec.md  tasks.md
openspec/changes/feat-m7-2-mcp-test-harness/: README.md  spec.md  tasks.md
openspec/changes/feat-m7-3-mcp-ci-conformance/: README.md  spec.md  tasks.md
openspec/changes/feat-m7-4-import-doctor-license/: README.md  spec.md  tasks.md
openspec/changes/feat-m7-mcp-research/: rmcp-research.md
openspec/changes/feat-m8-release/: README.md  crates-io-names.md  spec.md  tasks.md
openspec/changes/feat-v1.0.1-doc-site/: design.md  proposal.md  tasks.md
openspec/changes/feat-v1.1.0-flat-children-layout/: design.md  proposal.md  tasks.md
openspec/feat-grex/: README.md  spec.md
