[workspace]
resolver = "2"
members = [
    "crates/grex",
    "crates/grex-core",
    "crates/grex-mcp",
    "crates/grex-plugins-builtin",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/egoisth777/grex"
homepage = "https://github.com/egoisth777/grex"
authors = ["egoisth777"]
readme = "README.md"
keywords = ["dev-environment", "orchestrator", "pack", "mcp", "cli"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }

# MCP server framework (M7)
rmcp = "1.5.0"
# rmcp 1.5 transitively requires schemars 1.x and emits its `#[derive(JsonSchema)]`
# expansions against schemars 1.x's trait — see Stage 6 spec drift note. Workspace
# pin matches what rmcp pulls in to avoid duplicate-version compile errors.
schemars = "1.0"

# serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# git (pure Rust)
gix = { version = "0.70", default-features = false, features = [
    "blocking-network-client",
    "worktree-mutation",
    "revision",
    "status",
] }
# Sub-crate of gitoxide already pinned transitively via gix 0.70. Used for
# worktree materialisation on checkout (see GixBackend::checkout).
gix-worktree-state = { version = "0.17", default-features = false }

# fs locking
fd-lock = "4"

# errors
anyhow = "1"
thiserror = "1"

# glob matching (M4-D: grex sync --only)
globset = "0.4"

# tracing/logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# time
chrono = { version = "0.4", features = ["serde"] }

# output formatting
comfy-table = "7"
owo-colors = "4"

# internal workspace crates
grex-core = { path = "crates/grex-core", version = "1.0.0" }
grex-mcp = { path = "crates/grex-mcp", version = "1.0.0" }
grex-plugins-builtin = { path = "crates/grex-plugins-builtin", version = "1.0.0" }

# dev-dependencies (shared via workspace)
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

# Workspace-wide clippy gates. Thresholds in clippy.toml.
[workspace.lints.clippy]
too_many_lines = "deny"
cognitive_complexity = "deny"
