[package]
name = "grex-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for grex: manifest, lockfile, scheduler, pack model, plugin traits."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
gix = { workspace = true }
gix-worktree-state = { workspace = true }
fd-lock = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

# M2 placeholder deps retained for M3+ work (error adapters, YAML
# manifest parsing, async scheduler). Remove from this list as each is
# actually used. TODO(m3): delete this block.
[package.metadata.cargo-machete]
ignored = ["anyhow", "serde_yaml", "tokio"]
