[package]
name = "grex-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core library for grex: manifest, lockfile, scheduler, pack model, plugin traits."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
gix = { workspace = true }
gix-worktree-state = { workspace = true }
fd-lock = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = "0.10"

# Windows-only: HKCU / HKLM env-variable persistence for `env` action in
# FsExecutor. Minimal-feature build — we only touch string values.
[target.'cfg(windows)'.dependencies]
winreg = { version = "0.55", default-features = false }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

# M2 placeholder deps retained for M3+ work (error adapters, YAML
# manifest parsing, async scheduler). Remove from this list as each is
# actually used. TODO(m3): delete this block.
#
# `winreg` is only referenced from a `#[cfg(windows)]` path in the FsExecutor
# but is declared as a `[target.'cfg(windows)']` dep, so cargo-machete sees it
# as unused on non-Windows hosts. Ignore it here until machete grows proper
# target-cfg awareness.
[package.metadata.cargo-machete]
ignored = ["anyhow", "serde_yaml", "tokio", "winreg"]
