[package]
name = "grex-plugins-builtin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Built-in action primitives and pack-type handlers for grex."

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
grex-core = { workspace = true }

[lints]
workspace = true

# M2 scaffold: this crate is an empty shell. All deps are placeholders
# for M3+ action primitives (async, YAML pack manifests, core traits).
# TODO(m3): delete this block as each dep is actually used.
[package.metadata.cargo-machete]
ignored = [
    "anyhow",
    "grex-core",
    "serde",
    "serde_yaml",
    "thiserror",
    "tokio",
    "tracing",
]
