[package]
name = "grex-plugins-builtin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Built-in action primitives and pack-type handlers for grex."
documentation = "https://docs.rs/grex-plugins-builtin"
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
grex-core = { workspace = true }

[lints]
workspace = true

# docs.rs metadata (M8-3). Built-in action / pack-type plugins are a public
# lib surface; publish API docs alongside `grex-core` + `grex-mcp`.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# M2 scaffold: this crate is an empty shell. All deps are placeholders
# for M3+ action primitives (async, YAML pack manifests, core traits).
# TODO(m3): delete this block as each dep is actually used.
[package.metadata.cargo-machete]
ignored = [
    "anyhow",
    "grex-core",
    "serde",
    "serde_yaml",
    "thiserror",
    "tokio",
    "tracing",
]
