[package]
name = "grex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
description = "Cross-platform dev-environment orchestrator. Pack-based, agent-native, Rust-fast."

[[bin]]
name = "grex"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
comfy-table = { workspace = true }
owo-colors = { workspace = true }
grex-core = { workspace = true }
grex-plugins-builtin = { workspace = true }

# feat-m6-1: `grex sync --parallel` default resolves via num_cpus::get().
num_cpus = "1.16"

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

# M2 placeholder deps retained for M3+ wiring (CLI output, async runtime,
# serde boundaries, in-process core integration). Remove from this ignore
# list as each is actually used. TODO(m3): delete this block.
[package.metadata.cargo-machete]
ignored = [
    "comfy-table",
    "grex-core",
    "grex-plugins-builtin",
    "owo-colors",
    "serde",
    "serde_json",
    "tokio",
    "tracing",
    "tracing-subscriber",
]
