[package]
name = "grex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme.workspace = true
description = "Cross-platform dev-environment orchestrator. Pack-based, agent-native, Rust-fast."

[[bin]]
name = "grex"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
comfy-table = { workspace = true }
owo-colors = { workspace = true }
grex-core = { workspace = true }
grex-mcp = { path = "../grex-mcp" }
grex-plugins-builtin = { workspace = true }
# feat-m7-1 stage 2: CLI constructs a never-cancelled sentinel
# (`CancellationToken::new()`) and threads it into every core verb so
# the MCP server (stages 3+) can pass a real cancel handle through the
# same shared signature. Workspace-pinned to keep the version aligned
# with `grex-core` and `grex-mcp`.
tokio-util = { workspace = true }
# feat-m7-1 stage 8: `verbs/serve.rs` constructs the stdio transport
# directly via `rmcp::transport::stdio()`. The `transport-io` feature is
# already pulled by `grex-mcp` so the unification is free.
rmcp = { workspace = true, features = ["transport-io"] }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

# M2 placeholder deps retained for M3+ wiring (CLI output, async runtime,
# serde boundaries, in-process core integration). Remove from this ignore
# list as each is actually used. TODO(m3): delete this block.
[package.metadata.cargo-machete]
ignored = [
    "comfy-table",
    "grex-core",
    "grex-plugins-builtin",
    "owo-colors",
    "serde",
    "serde_json",
    "tokio",
    "tracing",
    "tracing-subscriber",
]
